Add workspaces and development scripts to package.json

--- a/package.json
+++ b/package.json
@@ -2,13 +2,22 @@
     "name": "tkify",
     "version": "1.0.0",
     "private": true,
+    "workspaces": [
+        "client",
+        "server"
+    ],
     "scripts": {
+        "dev:client": "cd client && npm run dev",
+        "dev:server": "cd server && npm run dev",
+        "dev": "concurrently -n \"FRONTEND,BACKEND\" -c \"bgBlue,bgMagenta\" \"npm run dev:client\" \"npm run dev:server\"",
+        "format": "prettier --write \"client/**/*.{js,jsx,ts,tsx,css,html}\" \"server/**/*.{js,jsx,ts,tsx,json}\""
     },
     "keywords": [],
     "author": "Subhajit Pramanik",
     "license": "MIT",
     "description": "Tkify - A fullstack project using Vite, React, Node.js, Express, and TypeScript.",
     "devDependencies": {
+        "concurrently": "^9.1.0",
         "prettier": "^3.4.1"
     }
 }
