--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
         "server"
     ],
     "scripts": {
-        "dev:client": "cd client && npm run dev",
-        "dev:server": "cd server && npm run dev",
-        "dev": "concurrently -n \"FRONTEND,BACKEND\" -c \"bgBlue,bgMagenta\" \"npm run dev:client\" \"npm run dev:server\"",
+        "client": "cd client && npm run dev",
+        "server": "cd server && npm run dev",
+        "dev": "concurrently -n \"FRONTEND,BACKEND\" -c \"bgBlue,bgMagenta\" \"npm run client\" \"npm run server\"",
         "format": "prettier --write \"client/**/*.{js,jsx,ts,tsx,css,html}\" \"server/**/*.{js,jsx,ts,tsx,json}\""
     },
     "keywords": [],
