--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,53 +1,53 @@
 version: '3.8'
 
 services:
-client:
+  client:
     build:
-    context: ./client
+      context: ./client
     ports:
-    - "3000:80"
+      - "3000:80"
     environment:
-        - VITE_API_URL=http://localhost:8080
+      - VITE_API_URL=http://localhost:8080
     depends_on:
-    - server
+      - server
     networks:
-    - tkify-net
+      - tkify-net
 
-server:
+  server:
     build:
-    context: ./server
+      context: ./server
     ports:
-    - "8080:8080"
+      - "8080:8080"
     environment:
-    - CORS_ORIGINS=http://localhost:3000
-    - MONGO_URI=mongodb://mongo:27017/tkify
-    - PORT=8080
-    - NODE_ENV=development
-    - ACCESS_TOKEN_SECRET=your_access_token_secret
-    - ACCESS_TOKEN_EXPIRES=1h
-    - REFRESH_TOKEN_SECRET=your_refresh_token_secret
-    - REFRESH_TOKEN_EXPIRES=30d
-    - CLOUDINARY_CLOUD_NAME=your cloudinary cloud name
-    - CLOUDINARY_API_KEY=your cloudinary api key
-    - CLOUDINARY_API_SECRET=your cloudinary api secret
+      - CORS_ORIGINS=http://localhost:3000
+      - MONGO_URI=mongodb://mongo:27017/tkify
+      - PORT=8080
+      - NODE_ENV=development
+      - ACCESS_TOKEN_SECRET=your_access_token_secret
+      - ACCESS_TOKEN_EXPIRES=1h
+      - REFRESH_TOKEN_SECRET=your_refresh_token_secret
+      - REFRESH_TOKEN_EXPIRES=30d
+      - CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
+      - CLOUDINARY_API_KEY=your_cloudinary_api_key
+      - CLOUDINARY_API_SECRET=your_cloudinary_api_secret
     depends_on:
-    - mongo
+      - mongo
     networks:
-    - tkify-net
+      - tkify-net
 
-mongo:
-    image: mongo
+  mongo:
+    image: mongo:latest
     container_name: mongo
     ports:
-    - "27017:27017"
+      - "27017:27017"
     volumes:
-    - mongo-data:/data/db
+      - mongo-data:/data/db
     networks:
-    - tkify-net
+      - tkify-net
 
 networks:
-    tkify-net:
-        driver: bridge
-    
+  tkify-net:
+    driver: bridge
+
 volumes:
-    mongo-data:
+  mongo-data:
