--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "dev": "node --loader=ts-node/esm --trace-warnings --env-file=.env --watch src/index.ts",
+    "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "serve": "node index.js"
@@ -23,7 +23,8 @@
     "mongoose": "^8.8.3",
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "tsx": "^4.19.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
